--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,16 @@ Package: rsignauxfaibles
 Type: Package
 Title: Charge et Analyse les Données de Signaux Faibles
 Version: 0.1.0
-Authors@R: person("Pierre", "Camilleri", email = "pierre.camilleri@direccte.gouv.fr", 
+Authors@R: person("Pierre", "Camilleri", email = "pierre.camilleri@direccte.gouv.fr",
   role = c("aut", "cre"))
 Description: Ce package permet de récupérer les données depuis MongoDB, de les traiter et de développer des modèles dans le cadre du projet de la startup d'État Signaux Faibles
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: 
-    tidyverse,
-    plyr,
+Imports:
+    dplyr,
+    tidyr,
+    tibble,
     h2o,
     lubridate,
     assertthat,
@@ -20,14 +21,10 @@ Imports:
     tibbletime,
     PRROC,
     broom,
-    rprojroot,
-    sparklyr, 
-    rsparkling
-Depends:
-    dplyr,
-    sparklyr,
-    h2o
-Suggests: 
+    rprojroot
+Suggests:
     ggplot2,
-    testthat
+    testthat,
+    sparklyr,
+    rsparkling
 RoxygenNote: 6.1.1
