--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,20 +10,23 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     assertthat,
-    broom,
     dplyr,
     h2o,
-    h2o,
     lubridate,
+    logger,
     mongolite,
     MLmetrics,
     PRROC,
+    purrr,
     rprojroot,
     tibble,
-    tibbletime,
     tidyr
 Suggests:
     ggplot2,
+    mlrMBO,
+    ParamHelpers,
+    rgenoud,
+    DiceKriging,
     testthat (>= 2.1.0)
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
