--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(predict,cv_task)
 S3method(predict,sf_task)
 S3method(prepare,cv_task)
 S3method(prepare,sf_task)
+S3method(save,sf_task)
 S3method(split_data,sf_task)
 S3method(train,cv_task)
 S3method(train,sf_task)
