roxygen sensitive to spaces ?!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(replace_na)
 export(save)
 export(save_h2o_object)
 export(set_h2o_types)
+export(sf_task)
 export(split_data)
 export(split_n_folds)
 export(split_snapshot_rdm_month)
