join_for_evaluation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(evaluate,cv_task)
 S3method(evaluate,sf_task)
 S3method(export,sf_task)
+S3method(join_for_evaluation,cv_task)
+S3method(join_for_evaluation,sf_task)
 S3method(load_hist_data,sf_task)
 S3method(load_new_data,sf_task)
 S3method(log,sf_task)
@@ -11,6 +13,7 @@ S3method(predict,cv_task)
 S3method(predict,sf_task)
 S3method(prepare,cv_task)
 S3method(prepare,sf_task)
+S3method(print,sf_task)
 S3method(save,sf_task)
 S3method(split_data,sf_task)
 S3method(train,cv_task)
@@ -34,6 +37,7 @@ export(get_fields_training_light)
 export(get_last_batch)
 export(get_scores)
 export(get_sirets_of_detected)
+export(join_for_evaluation)
 export(load)
 export(load_h2o_object)
 export(load_hist_data)
