First try global explanation
Exported working "explain"

export read_aggregation

Oups it was correct

Return the actual result

Matrice de corrélation

na.rm for plot_correlation

First try linear preparation - untested

Linear train function - untested

Coquille (oubli transformation matrix)

Je suis un neuneu:

Correction coquille et amélioration bestNormalize

Ajout de "outcome" en paramètre pour la préparation des données

Modif pour l'entraînement également

Si on laisse les NA ?

Retour en arrière

Vilain artefact

 J'ai cassé xgboost

Une fois n'est pas coutume

Encore un

YeoJohnson instead of bestNormalize

Explainer correction + remplacement effectif_ent

Coquille explain

Coquille export + Man pages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,17 +29,20 @@ Imports:
     xgboost,
     rlang
 Suggests:
+    corrplot,
     jsonlite,
     ggplot2,
     Hmisc,
     lhs,
     mlr,
     mlrMBO,
+    moments,
     ParamHelpers,
     rgenoud,
     smoof,
     rmarkdown,
     DiceKriging,
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    xgboostExplainer
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
