--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(get_fields_training_light)
 export(get_last_batch)
 export(get_scores)
 export(get_sirets_of_detected)
+export(get_test_task_2)
 export(load)
 export(load_hist_data)
 export(load_new_data)
