Improving data preparation step 1: some cleaning
Many changes in data_preparation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,10 @@ export(optimize_hyperparameters)
 export(plot_correlation)
 export(predict_model)
 export(prepare)
+export(prepare_test_frame_linear)
+export(prepare_test_frame_xgboost)
+export(prepare_train_frame_linear)
+export(prepare_train_frame_xgboost)
 export(read_aggregation_matrix)
 export(replace_na)
 export(save)
