--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,11 @@ S3method(split_data,sf_task)
 S3method(train,cv_task)
 S3method(train,sf_task)
 export(alert_levels)
+export(apply_fte_map)
 export(aux_custom_eval_urssaf)
 export(aux_custom_plot_urssaf)
 export(connect_to_database)
+export(create_fte_map)
 export(custom_eval_urssaf)
 export(evaluate)
 export(explain)
@@ -41,13 +43,12 @@ export(plot_correlation)
 export(predict_model)
 export(prepare)
 export(prepare_test_frame_linear)
-export(prepare_test_frame_xgboost)
 export(prepare_train_frame_linear)
-export(prepare_train_frame_xgboost)
 export(read_aggregation_matrix)
 export(replace_na)
 export(save)
 export(sf_task)
+export(shape_for_xgboost)
 export(split_data)
 export(split_n_folds)
 export(split_snapshot_rdm_month)
