Working test for replace_missing_data (with test_table)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ export(alert_levels)
 export(apply_fte_map)
 export(aux_custom_eval_urssaf)
 export(aux_custom_plot_urssaf)
-export(connect_to_database)
 export(create_fte_map)
 export(custom_eval_urssaf)
 export(evaluate)
@@ -32,6 +31,7 @@ export(get_last_batch)
 export(get_scores)
 export(get_sirets_of_detected)
 export(get_test_task_2)
+export(import_data)
 export(load)
 export(load_hist_data)
 export(load_new_data)
