Ajout d'un thème minimal exporté pour les graphiques

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(read_aggregation_matrix)
 export(replace_na)
 export(save)
 export(sf_task)
+export(sf_theme)
 export(shape_for_xgboost)
 export(split_data)
 export(split_n_folds)
