Adding color palette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,9 @@ export(prepare_train_frame_linear)
 export(read_aggregation_matrix)
 export(replace_na)
 export(save)
+export(scale_color_sf)
+export(scale_fill_sf)
+export(sf_colors)
 export(sf_task)
 export(sf_theme)
 export(shape_for_xgboost)
