Nettoyage: Mise-à-jour des requêtes et beaucoup trop d'autres modifs d'un coup.
* Regions comme facteurs

* Optimisation requête

* Default value to FALSE for different outcome tags

* Remplace le lien manquant pour la seed de xgboost

* Seed passée en paramètre à xgboost

* Retour en arrière, doc confuse

* First try global explanation


Exported working "explain"

export read_aggregation

Oups it was correct

Return the actual result

Matrice de corrélation

na.rm for plot_correlation

First try linear preparation - untested

Linear train function - untested

Coquille (oubli transformation matrix)

Je suis un neuneu:

Correction coquille et amélioration bestNormalize

Ajout de "outcome" en paramètre pour la préparation des données

Modif pour l'entraînement également

Si on laisse les NA ?

Retour en arrière

Vilain artefact

 J'ai cassé xgboost

Une fois n'est pas coutume

Encore un

YeoJohnson instead of bestNormalize

Explainer correction + remplacement effectif_ent

Coquille explain

Coquille export + Man pages

* Testing framework and some improvements on explanation

* Documentation

* Debug request

* Correction valeurs par défaut lorsque toutes les valeurs sont manquantes

* plot_waterfall function

* Roxygen update and function rename

* Que se passe-t-il ?

* Removing h2o dependence

* random linting

* Improving data preparation step 1: some cleaning

Many changes in data_preparation

* Updating man pages

* Updating cv_tasks as well

* More consistent function signatures
(include all options in "options" list)

* Mistake + updating tests accordingly

* Adding OUTCOME_FIELD as default option

* Other mistake and man pages

* refacto: linting

* Adding mlr3 tasks without interfering with current code

* Moving test_data_load.R and adding siren as a group variable for subsampling

* Renommage "connect_to_database" to "import_data"

* Working test for re

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,17 +28,20 @@ Imports:
     xgboost,
     rlang
 Suggests:
+    corrplot,
     jsonlite,
     ggplot2,
     Hmisc,
     lhs,
     mlr,
     mlrMBO,
+    moments,
     ParamHelpers,
     rgenoud,
     smoof,
     rmarkdown,
     DiceKriging,
-    testthat (>= 2.1.0)
-RoxygenNote: 6.1.1
+    testthat (>= 2.1.0),
+    xgboostExplainer
+RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE)
