--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,40 +9,45 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
+    MLmetrics,
+    PRROC,
     assertthat,
     dplyr,
-    lubridate,
-    logger,
-    mongolite,
-    MLmetrics,
-    MLlogr,
-    MLsegmentr,
     fte,
-    PRROC,
-    purrr,
     here,
+    logger,
+    lubridate,
+    mongolite,
+    purrr,
+    rlang,
+    stringr,
     tibble,
     tidyr,
     uuid,
-    stringr,
-    xgboost,
-    rlang
+    xgboost
 Suggests:
-    corrplot,
-    jsonlite,
-    ggplot2,
+    DiceKriging,
     Hmisc,
+    MLlogr,
+    MLsegmentr,
+    ParamHelpers,
+    corrplot,
+    ggplot2,
+    jsonlite,
     lhs,
     mlr,
     mlrMBO,
     moments,
-    ParamHelpers,
     rgenoud,
-    smoof,
     rmarkdown,
-    DiceKriging,
+    smoof,
     testthat (>= 2.1.0),
     xgboostExplainer
+Additional_repositories:
+    https://github.com/signaux-faibles/MLsegmentr
+    https://github.com/signaux-faibles/MLlogr
+    https://github.com/signaux-faibles/fte
+    https://github.com/AppliedDataSciencePartners/xgboostExplainer
 RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/signaux-faibles/rsignauxfaibles
