Replacing MLlogr with mlflow (only suggested) in the DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-    MLlogr,
     MLsegmentr,
     assertthat,
     dplyr,
@@ -31,6 +30,7 @@ Suggests:
     corrplot,
     ggplot2,
     lhs,
+    mlflow,
     mlr,
     mlrMBO,
     rgenoud,
