--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-    MLlogr,
     MLsegmentr,
     assertthat,
     dplyr,
@@ -31,6 +30,7 @@ Suggests:
     corrplot,
     ggplot2,
     lhs,
+    mlflow,
     mlr,
     mlrMBO,
     rgenoud,
@@ -39,7 +39,6 @@ Suggests:
     xgboostExplainer
 Remotes:
     AppliedDataSciencePartners/xgboostExplainer,
-    signaux-faibles/MLlogr,
     signaux-faibles/MLsegmentr,
     signaux-faibles/fte
 RoxygenNote: 7.1.0
