Exporting new log functions
+ Writing short documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ export(import_data)
 export(load)
 export(load_hist_data)
 export(load_new_data)
+export(log_metric)
+export(log_param)
 export(mark_known_sirets)
 export(name_file)
 export(optimize_hyperparameters)
