Refacto complet de get_test_task()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(format_for_export)
 export(get_fields_training_light)
 export(get_scores)
 export(get_sirets_of_detected)
+export(get_test_task)
 export(import_data)
 export(load)
 export(load_hist_data)
@@ -46,8 +47,6 @@ export(sf_task)
 export(sf_theme)
 export(shape_for_xgboost)
 export(split_data)
-export(split_n_folds)
-export(split_snapshot_rdm_month)
 export(train)
 export(train_linear)
 export(train_xgboost)
