Update NAMESPACE accordingly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,7 +51,7 @@ export(train)
 export(train_linear)
 export(train_xgboost)
 import(dplyr)
+importFrom(data.table,":=")
 importFrom(lubridate,"%m+%")
 importFrom(lubridate,"%m-%")
-importFrom(rlang,":=")
 importFrom(stats,predict)
