--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,6 @@ Imports:
     lubridate,
     mlr3,
     mlr3learners,
-    mlr3pipelines,
     mongolite,
     purrr,
     stringr,
@@ -41,6 +40,7 @@ Suggests:
     xgboostExplainer
 Remotes:
     AppliedDataSciencePartners/xgboostExplainer,
+    mlr-org/mlr3pipelines,
     signaux-faibles/MLsegmentr,
     signaux-faibles/fte
 RoxygenNote: 7.1.0
