Forgot to write namespace !

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,4 +54,5 @@ import(dplyr)
 importFrom(data.table,":=")
 importFrom(lubridate,"%m+%")
 importFrom(lubridate,"%m-%")
+importFrom(mlr3pipelines,"%>>%")
 importFrom(stats,predict)
