get_fields() n'était plus exporté par erreur. # Veuillez saisir le message de validation pour vos modifications. Les lignes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(evaluate)
 export(explain)
 export(export)
 export(format_for_export)
+export(get_fields)
 export(get_fields_training_light)
 export(get_scores)
 export(get_sirets_of_detected)
