--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,19 +7,16 @@ S3method(load_new_data,sf_task)
 S3method(optimize_hyperparameters,sf_task)
 S3method(predict,cv_task)
 S3method(predict,sf_task)
-S3method(prepare,cv_task)
 S3method(prepare,sf_task)
 S3method(print,sf_task)
 S3method(split_data,sf_task)
-S3method(train,cv_task)
 S3method(train,sf_task)
 export(alert_levels)
-export(apply_fte_map)
-export(create_fte_map)
 export(evaluate)
 export(explain)
 export(export)
 export(format_for_export)
+export(get_fields)
 export(get_fields_training_light)
 export(get_scores)
 export(get_sirets_of_detected)
@@ -46,8 +43,6 @@ export(sf_theme)
 export(shape_for_xgboost)
 export(split_data)
 export(train)
-export(train_linear)
-export(train_xgboost)
 import(dplyr)
 importFrom(data.table,":=")
 importFrom(lubridate,"%m+%")
