--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,10 @@ export(evaluate)
 export(explain)
 export(export)
 export(format_for_export)
+export(get_default_pipeline)
 export(get_fields)
 export(get_fields_training_light)
+export(get_prepared_data)
 export(get_scores)
 export(get_sirets_of_detected)
 export(get_test_task)
@@ -40,7 +42,6 @@ export(scale_fill_sf)
 export(sf_colors)
 export(sf_task)
 export(sf_theme)
-export(shape_for_xgboost)
 export(split_data)
 export(train)
 import(dplyr)
