--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Suggests:
     ggplot2,
     lhs,
     mlflow,
-    mlr,
+    mlr3tuning,
+    paradox,
     smoof,
     testthat (>= 2.1.0),
     xgboostExplainer
