feat: optimisation des hyperparamètres avec mlr3 (#31)
* Optimisation des hyperparamètres avec `mlr3tuning`. 
* Retrait de l'ancienne méthode.
* Test minimal. 
* Màj des dépendences.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,15 +26,12 @@ Imports:
     xgboost,
     data.table
 Suggests:
-    DiceKriging,
-    ParamHelpers,
     corrplot,
     ggplot2,
     lhs,
     mlflow,
-    mlr,
-    mlrMBO,
-    rgenoud,
+    mlr3tuning,
+    paradox,
     smoof,
     testthat (>= 2.1.0),
     xgboostExplainer
