--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(evaluate)
 export(explain)
 export(export)
 export(format_for_export)
+export(get_default_measure)
 export(get_default_pipeline)
 export(get_fields)
 export(get_fields_training_light)
