Adding forgotten package call mlr3::

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(export)
 export(format_for_export)
 export(get_default_learner)
 export(get_default_measure)
+export(get_default_param_set)
 export(get_default_pipeline)
 export(get_fields)
 export(get_fields_training_light)
