BREAKING CHANGE: Convert codebase to use mlr3  (#33)
Many changes to stick to mlr3 framework.
Breaks api functions, changes are documented in the functions.

* red: select features with `training_fields` param

* Semi-green: selected features passed to mlr3task

Added TODO to avoid that invalid passed features are ignored silently,
and to be able to add variables during preparation as features

* red: define / redefine target in task

* semi-green: working with default target

* red: extending test on outcome

* Green: prepare can change task target if a new one is provided

* red: prepare with a mlr3 pipeline

* green: simple pipeline works

* feat: mlr3 impact encoding pipeop (#23)

- removing rlang dependency
- defining custom pipeop for testing 
- defining impact encoding pipeop

* feat: train a mlr3 learner  (#24)

Possibility to pass a mlr3::Learner to train function.

* feat: updating predict to use mlr3 (#25)

* Adding possibility to predict from mlr3 learner or resampling

* feat: evaluate predictions from mlr3 (#26)

Updating "evaluate" function. 
TODO: "removeStrongSignals" n'a pas été intégré à ce stade

* test(mlr3): Adding additional tests for mlr3 (#27)

Prochaine étape dans la conversion des fonctions dans le cadre de mlr3:
- Création de la tâche mlr3 désormais dans `load_hist_data`
- Retrait des fonctions spécifiques pour un algorithme linéaire. Ces fonctions seront remplacé par des mlr3pipelines. 
- Ajout de la possibilité de faire de la validation croisée. 
- Tests de la fonction prepare, train, predict, et eval
- Simplification de `eval`, qui n'utilise plus MLsegmentr mais mlr3measures. 
- Correction et test de la fonction `predict.sf_task`
- Ajout de l'option stage = "train" dans get_test_task, utilisation de la fonction prepare plutôt qu'une simulation de préparation.

* tests(mlr3): Ajout de tests avec de la validation croisée. (#28)

Ajout de tests avec de la validation croisée pour: 
- `

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,38 +9,36 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-    MLsegmentr,
     assertthat,
     dplyr,
-    fte,
     jsonlite,
-    logger,
+    lgr,
     lubridate,
     mlr3,
+    mlr3learners,
+    mlr3measures,
+    mlr3pipelines,
     mongolite,
     purrr,
-    rlang,
     stringr,
     tibble,
     tidyr,
-    xgboost
+    xgboost,
+    data.table
 Suggests:
-    DiceKriging,
-    ParamHelpers,
     corrplot,
     ggplot2,
     lhs,
     mlflow,
-    mlr,
-    mlrMBO,
-    rgenoud,
+    mlr3tuning,
+    paradox,
     smoof,
+    rpart,
     testthat (>= 2.1.0),
     xgboostExplainer
 Remotes:
     AppliedDataSciencePartners/xgboostExplainer,
-    signaux-faibles/MLsegmentr,
-    signaux-faibles/fte
+    mlr-org/mlr3pipelines,
 RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/signaux-faibles/rsignauxfaibles
