--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,22 +5,23 @@ S3method(export,sf_task)
 S3method(load_hist_data,sf_task)
 S3method(load_new_data,sf_task)
 S3method(optimize_hyperparameters,sf_task)
-S3method(predict,cv_task)
 S3method(predict,sf_task)
-S3method(prepare,cv_task)
 S3method(prepare,sf_task)
 S3method(print,sf_task)
 S3method(split_data,sf_task)
-S3method(train,cv_task)
 S3method(train,sf_task)
 export(alert_levels)
-export(apply_fte_map)
-export(create_fte_map)
 export(evaluate)
 export(explain)
 export(export)
 export(format_for_export)
+export(get_default_learner)
+export(get_default_measure)
+export(get_default_param_set)
+export(get_default_pipeline)
+export(get_fields)
 export(get_fields_training_light)
+export(get_prepared_data)
 export(get_scores)
 export(get_sirets_of_detected)
 export(get_test_task)
@@ -36,8 +37,6 @@ export(optimize_hyperparameters)
 export(plot_correlation)
 export(predict_model)
 export(prepare)
-export(prepare_test_frame_linear)
-export(prepare_train_frame_linear)
 export(read_aggregation_matrix)
 export(save)
 export(scale_color_sf)
@@ -45,13 +44,11 @@ export(scale_fill_sf)
 export(sf_colors)
 export(sf_task)
 export(sf_theme)
-export(shape_for_xgboost)
 export(split_data)
 export(train)
-export(train_linear)
-export(train_xgboost)
 import(dplyr)
+importFrom(data.table,":=")
 importFrom(lubridate,"%m+%")
 importFrom(lubridate,"%m-%")
-importFrom(rlang,":=")
+importFrom(mlr3pipelines,"%>>%")
 importFrom(stats,predict)
