Documentation des nouvelles fonctions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,9 @@ export(plot_correlation)
 export(predict_model)
 export(prepare)
 export(read_aggregation_matrix)
+export(replace_hist_data)
+export(replace_new_data)
+export(reset_for_new_run)
 export(save)
 export(scale_color_sf)
 export(scale_fill_sf)
