--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(alert_levels)
 export(evaluate)
 export(explain)
 export(export)
+export(export_scores_to_mongodb)
 export(filter_task)
 export(format_for_export)
 export(get_default_learner)
