--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(alert_levels)
 export(evaluate)
 export(explain)
 export(export)
+export(filter_task)
 export(format_for_export)
 export(get_default_learner)
 export(get_default_measure)
@@ -38,6 +39,9 @@ export(plot_correlation)
 export(predict_model)
 export(prepare)
 export(read_aggregation_matrix)
+export(replace_hist_data)
+export(replace_new_data)
+export(reset_for_new_run)
 export(save)
 export(scale_color_sf)
 export(scale_fill_sf)
