feat: basculement de toute la chaîne d'apprentissage et d'évaluation vers mlr3  (#39)
**Fonctionnalités:** 
- Finalisation de l'utilisation de mlr3 derrière les fonctions de rsignauxfaibles:
  - Implémentation de la validation croisée 
  - Préparation des données intégralement faite avec `mlr3pipelines`
  - Entraînement intégralement faite avec `mlr3` et `mlr3pipelines`.
  - Prédiction intégralement faite avec `mlr3`.
  - Evaluation intégralement faite avec `mlr3`.
  - Optimisation des hyperparamètres intégralement faite avec  `mlr3`.
  - Suppression de `prepare.sf_task`: la préparation devient partie intégrante de l'entraînement. Possibilité de consulter le résultat de la préparation avec `get_prepared_data`. 

  - Mise à jour de `get_test_task` en conséquence.
  - Mise à jour de la documentation en conséquence. 
  - Mise à jour des tests en conséquence. 



**Nettoyage:**
- Nettoyage des dépendances caduques.
- Création de fonctions d'objets mlr par défaut: `get_default_learner`, `get_default_measure`, `get_default_param_set`, `get_default_pipeline`
- Remplacement `logger` par `lgr`  pour diminuer les dépendances.  Suppression des paramètres "verbose", "debug", intégralement basculés vers les logs lgr.

**Ajout des fonctions suivantes:** 
- `replace_hist_data`: remplace les données historiques (propriété "hist_data" de la tâche d'apprentissage)
- `replace_new_data`: remplace le nouvelles données (propriété "new_data" de la tâche d'apprentissage)
- `reset_for_new_run`: réinitialise une tâche d'apprentissage pour un nouvel entraînement
- `filter_task`: filtre sur les sirets souhaités -- Attention, réinitialise la tâche, à faire immédiatement après le chargement des données.  

**Mise à jour des tests pour prendre en compte les évolutions de versions des dépendances, notamment mlr3**

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,12 +26,14 @@ Imports:
     xgboost,
     data.table
 Suggests:
+    bbotk,
     corrplot,
     ggplot2,
     lhs,
     mlflow,
     mlr3tuning,
     paradox,
+    pryr,
     smoof,
     rpart,
     testthat (>= 2.1.0),
@@ -39,7 +41,7 @@ Suggests:
 Remotes:
     AppliedDataSciencePartners/xgboostExplainer,
     mlr-org/mlr3pipelines,
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/signaux-faibles/rsignauxfaibles
 BugReports: https://github.com/signaux-faibles/rsignauxfaibles/issues
