--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(print,sf_task)
 S3method(split_data,sf_task)
 S3method(train,sf_task)
 export(alert_levels)
+export(copy_for_new_run)
 export(evaluate)
 export(explain)
 export(export)
@@ -42,7 +43,6 @@ export(prepare)
 export(read_aggregation_matrix)
 export(replace_hist_data)
 export(replace_new_data)
-export(reset_for_new_run)
 export(save)
 export(scale_color_sf)
 export(scale_fill_sf)
