--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(get_default_param_set)
 export(get_default_pipeline)
 export(get_fields)
 export(get_fields_training_light)
+export(get_prepared_data)
 export(get_scores)
 export(get_sirets_of_detected)
 export(get_test_task)
