comment + test for CI

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,8 +37,7 @@ Suggests:
     smoof,
     rpart,
     testthat (>= 2.1.0)
-Remotes:
-    signaux-faibles/mlr3extralearners
+Remotes: signaux-faibles/mlr3extralearners#1
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/signaux-faibles/rsignauxfaibles
