--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(evaluate)
 export(explain)
 export(export)
 export(export_scores_to_mongodb)
+export(fetch_conj_data)
 export(filter_task)
 export(format_for_export)
 export(get_default_learner)
