--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ S3method(prepare,sf_task)
 S3method(print,sf_task)
 S3method(split_data,sf_task)
 S3method(train,sf_task)
+export(aggregate_by_n_months)
+export(aggregate_by_secteur)
 export(alert_levels)
 export(copy_for_new_run)
 export(evaluate)
@@ -19,6 +21,8 @@ export(export_scores_to_mongodb)
 export(fetch_conj_data)
 export(filter_task)
 export(format_for_export)
+export(get_ape_to_naf)
+export(get_ape_to_secteur)
 export(get_default_learner)
 export(get_default_measure)
 export(get_default_param_set)
@@ -44,6 +48,7 @@ export(prepare)
 export(read_aggregation_matrix)
 export(replace_hist_data)
 export(replace_new_data)
+export(requete_secteurs_agreges)
 export(save)
 export(scale_color_sf)
 export(scale_fill_sf)
