feat: fonction de calcul de contribution des variables individuelles  (#57)
* feat: `get_prepared_data` supporte les tâches sans échantillonnage

* Ajout précision doc `get_prepared_data`

* Retrait d'un skip_on_CI

Utilisé car en intégration continue la version du package mlr3 était
différente et faisait échouer le test. Ne devrait plus être utile.

* Ajout mention paramètre non requis dans la documentation

* Ajout d'un test spécifiqueà get_prepared_data

* Revert "Retrait d'un skip_on_CI"

This reverts commit ceef22ced7b528c6a08595e627dcfc67aba44134.

* feat: `reset_for_new_run` clone les objets mlr3 (#53)

* Red: mlr3 objects are not cloned

* green: reset_for_new_run clones mlr3 objects

* Vocabulaire

* Renommage + Documentation

* `keep_results = TRUE` in pipeline

* Suppression de get_prepared_data

* feat: étendre la fonctionnalité de `get_prepared_data` à une tâche sans échanillonnage. (#51)

* feat: `get_prepared_data` supporte les tâches sans échantillonnage

* Ajout précision doc `get_prepared_data`

* Retrait d'un skip_on_CI

Utilisé car en intégration continue la version du package mlr3 était
différente et faisait échouer le test. Ne devrait plus être utile.

* Ajout mention paramètre non requis dans la documentation

* Ajout d'un test spécifiqueà get_prepared_data

* Revert "Retrait d'un skip_on_CI"

This reverts commit ceef22ced7b528c6a08595e627dcfc67aba44134.

* keep_results géré par train.sf_task

* Revert "Suppression de get_prepared_data"

This reverts commit 40bfdf0ee9f071aff82280954cf5e64e6abe9ec0.

* get_prepared_data internally predicts on new data

* `get_prepared_data` prend "data" au lieu de "test_or_train"

* NAMESPACE

* Retrait de "keep_intermediate_results" inutilisé

* First try of gam explainer

* First test

* green: explain_gam produces expected output

* Loading namespace "mlr3extralearners" in test

* remove commented code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,15 @@ S3method(print,sf_task)
 S3method(split_data,sf_task)
 S3method(train,sf_task)
 export(alert_levels)
+export(copy_for_new_run)
 export(evaluate)
 export(explain)
+export(explain_gam)
 export(export)
 export(export_scores_to_mongodb)
 export(filter_task)
 export(format_for_export)
+export(get_default_explanation_method)
 export(get_default_learner)
 export(get_default_measure)
 export(get_default_param_set)
@@ -40,7 +43,6 @@ export(predict_model)
 export(prepare)
 export(replace_hist_data)
 export(replace_new_data)
-export(reset_for_new_run)
 export(save)
 export(scale_color_sf)
 export(scale_fill_sf)
