feat: modèle additif généralisé par défaut (#56)
* feat: `get_gam_learner`

* test du bon comportement du gam

* Nettoyage des fonctions non testées d'explication du modèle

* Oubli du paramètre "task"

* Màj documentation en conséquence

* coquille d'une méthode explain

* store_models = TRUE by default

* First test

* document()

* Adding signaux-faibles/mlr3extralearners as dependency

* feat: fonction de calcul de contribution des variables individuelles  (#57)

* feat: `get_prepared_data` supporte les tâches sans échantillonnage

* Ajout précision doc `get_prepared_data`

* Retrait d'un skip_on_CI

Utilisé car en intégration continue la version du package mlr3 était
différente et faisait échouer le test. Ne devrait plus être utile.

* Ajout mention paramètre non requis dans la documentation

* Ajout d'un test spécifiqueà get_prepared_data

* Revert "Retrait d'un skip_on_CI"

This reverts commit ceef22ced7b528c6a08595e627dcfc67aba44134.

* feat: `reset_for_new_run` clone les objets mlr3 (#53)

* Red: mlr3 objects are not cloned

* green: reset_for_new_run clones mlr3 objects

* Vocabulaire

* Renommage + Documentation

* `keep_results = TRUE` in pipeline

* Suppression de get_prepared_data

* feat: étendre la fonctionnalité de `get_prepared_data` à une tâche sans échanillonnage. (#51)

* feat: `get_prepared_data` supporte les tâches sans échantillonnage

* Ajout précision doc `get_prepared_data`

* Retrait d'un skip_on_CI

Utilisé car en intégration continue la version du package mlr3 était
différente et faisait échouer le test. Ne devrait plus être utile.

* Ajout mention paramètre non requis dans la documentation

* Ajout d'un test spécifiqueà get_prepared_data

* Revert "Retrait d'un skip_on_CI"

This reverts commit ceef22ced7b528c6a08595e627dcfc67aba44134.

* keep_results géré par train.sf_task

* Revert "Suppression de get_prepared_data"

This reverts commit 40bfdf0ee9f071aff822809

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,12 @@ export(alert_levels)
 export(copy_for_new_run)
 export(evaluate)
 export(explain)
+export(explain_gam)
 export(export)
 export(export_scores_to_mongodb)
 export(filter_task)
 export(format_for_export)
+export(get_default_explanation_method)
 export(get_default_learner)
 export(get_default_measure)
 export(get_default_param_set)
@@ -37,10 +39,8 @@ export(log_param)
 export(mark_known_sirets)
 export(name_file)
 export(optimize_hyperparameters)
-export(plot_correlation)
 export(predict_model)
 export(prepare)
-export(read_aggregation_matrix)
 export(replace_hist_data)
 export(replace_new_data)
 export(save)
