--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,16 +13,19 @@ S3method(train,sf_task)
 export(aggregate_by_n_months)
 export(aggregate_by_secteur)
 export(alert_levels)
+export(compute_debt_correction)
+export(compute_sectorial_correction)
 export(copy_for_new_run)
 export(evaluate)
 export(explain)
 export(export)
 export(export_scores_to_mongodb)
+export(fetch_aggregated_sectors)
 export(fetch_conj_data)
 export(filter_task)
 export(format_for_export)
+export(generate_failure_data)
 export(get_ape_to_naf)
-export(get_ape_to_secteur)
 export(get_default_learner)
 export(get_default_measure)
 export(get_default_param_set)
@@ -48,7 +51,6 @@ export(prepare)
 export(read_aggregation_matrix)
 export(replace_hist_data)
 export(replace_new_data)
-export(requete_secteurs_agreges)
 export(save)
 export(scale_color_sf)
 export(scale_fill_sf)
