Export apply_corrections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(train,sf_task)
 export(aggregate_by_n_months)
 export(aggregate_by_secteur)
 export(alert_levels)
+export(apply_corrections)
 export(compute_debt_correction)
 export(compute_sectorial_correction)
 export(copy_for_new_run)
