feat: Ajout des corrections a posteriori des prédictions (#58)
* fetch_conj_data récupère les données de conjoncture

* renommage + documentation

* Fonctions de chargement et de modification des données de défaillance

* Documentation

* Fonction pour calculer les corrections sectorielles

* Ajout d'un test

* Ajout entraînement du modèle.

* linting

* Coquille

* Renaming to "post_sector_correction"

* Ajout de la fonction de correction selon les débits

* Doc + fonction de prise en compte des corrections

* Erreur de syntaxe

* Correction oubli maj test

* Documentation "apply_corrections"

* Documentation

* Finishing apply_corrections

* Changing training fields to a small subset

* Remplacement modèle par défaut dans README

* Explanation for model without sampling

* Suppression de documentation et code obsolète

* Export apply_corrections

* Correction coquille

* Correction coquille 2

* Document

* Update README

* Coquille README
lignes

* Nieme coquille

* Allow_new_levels = TRUE

* nn

* Filet de sécurité

* Filet de sécurité 2

* Correction coquille 10

* Parallélisation du modèle brms sur les données de conjoncture

* Correction unicité des sirets au moment du join

* Correction création data.frame

* Coquille #11

* Correction tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ LazyData: true
 Imports:
     assertthat,
     dplyr,
+    gtools,
     jsonlite,
     lgr,
     lubridate,
@@ -37,6 +38,7 @@ Suggests:
     pryr,
     smoof,
     rpart,
+    rwebstat,
     testthat (>= 2.1.0)
 Remotes: signaux-faibles/mlr3extralearners#2
 RoxygenNote: 7.1.1
