--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,22 +10,30 @@ S3method(prepare,sf_task)
 S3method(print,sf_task)
 S3method(split_data,sf_task)
 S3method(train,sf_task)
+export(aggregate_by_n_months)
+export(aggregate_by_secteur)
 export(alert_levels)
+export(apply_corrections)
+export(compute_debt_correction)
+export(compute_sectorial_correction)
 export(copy_for_new_run)
 export(evaluate)
 export(explain)
 export(explain_gam)
 export(export)
 export(export_scores_to_mongodb)
+export(fetch_aggregated_sectors)
+export(fetch_conj_data)
 export(filter_task)
 export(format_for_export)
+export(generate_failure_data)
+export(get_ape_to_naf)
 export(get_default_explanation_method)
 export(get_default_learner)
 export(get_default_measure)
 export(get_default_param_set)
 export(get_default_pipeline)
 export(get_fields)
-export(get_fields_training_light)
 export(get_prepared_data)
 export(get_scores)
 export(get_sirets_of_detected)
